# exact-hubbard

./: .gitignore  CMakeLists.txt  README.md
ana/: aiphilight.mplstyle  correlators.py  spectrum.py
src/: CMakeLists.txt  always_false.hpp  check_config.cpp  config.hpp  correlators.cpp  correlators.hpp  io.cpp  io.hpp  linalg.hpp  main.cpp  matrix.hpp  operator.hpp  spectrum.cpp  spectrum.hpp  state.cpp  state.hpp
